# automation-library

./: .complianceignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  codecov.yml  linter.py
1Password/: CHANGELOG.md  connector_1password_epm.json  main.py  manifest.json  pyproject.toml  trigger_1password_epm.json
AWS/: CHANGELOG.md  Dockerfile  connector_aws_device_assets.json  connector_aws_user_assets.json  connector_s3_cloudfront.json  connector_s3_flowlogs.json  connector_s3_flowlogs_parquet.json  connector_s3_logs.json  connector_s3_ocsf.json  connector_s3_records.json  connector_sqs_messages.json  main.py  manifest.json  pyproject.toml  trigger_cloudtrail_logs.json  trigger_flowlogs.json  trigger_s3_cloudfront.json  trigger_s3_flowlogs.json  trigger_s3_flowlogs_parquet.json  trigger_s3_logs.json  trigger_s3_ocsf.json  trigger_s3_parquet.json  trigger_s3_records.json  trigger_sqs_messages.json
Akamai/: CHANGELOG.md  connector_akamai_waf_logs.json  main.py  manifest.json  pyproject.toml  trigger_akamai_waf_logs.json
AssetConnector/: CHANGELOG.md  connector_fake_assets.json  connector_harfanglab_assets.json  main.py  manifest.json  pyproject.toml
Azure/: CHANGELOG.md  connector_azure_activity_logs_events.json  connector_azure_blob_storage_events.json  connector_azure_eventhub.json  connector_azure_flow_logs_collector.json  connector_azure_key_vault.json  connector_azure_network_watcher_collector.json  dev.py  main.py  manifest.json  pyproject.toml  trigger_azure_activity_logs_events.json  trigger_azure_blob_storage_events.json  trigger_azure_entraid_graph_api.json  trigger_azure_eventhub.json  trigger_azure_flow_logs_collector.json  trigger_azure_key_vault_events.json  trigger_azure_network_watcher_collector.json
AzureActiveDirectory/: CHANGELOG.md  action_delete_app.json  action_disable_user.json  action_enable_user.json  action_get_signins.json  action_get_user.json  action_get_user_authentication_methods.json  main.py  manifest.json  pyproject.toml
AzureMonitor/: CHANGELOG.md  CONFIGURE.md  action_query_logs.json  connector_azure_activity_logs_events.json  main.py  manifest.json  pyproject.toml  trigger_azure_activity_logs_events.json
BeyondTrust/: CHANGELOG.md  connector_beyondtrust_pra.json  main.py  manifest.json  pyproject.toml  trigger_beyondtrust_pra.json
BinaryEdges/: CHANGELOG.md  Dockerfile  action_get_query_cve_ip__target_.json  action_get_query_dataleaks_email__email_.json  action_get_query_dataleaks_info.json  action_get_query_dataleaks_organization__domain_.json  action_get_query_domains_dns__target_.json  action_get_query_domains_ip__target_.json  action_get_query_domains_search.json  action_get_query_domains_subdomain__target_.json  action_get_query_image_ip__target_.json  action_get_query_image_search.json  action_get_query_image_tags.json  action_get_query_ip__target_.json  action_get_query_ip_historical__target_.json  action_get_query_score_ip__target_.json  action_get_query_search.json  action_get_query_search_stats.json  action_get_query_sensors_ip__target_.json  action_get_query_sensors_search.json  action_get_query_sensors_search_stats.json  action_get_query_sensors_tag__tag_.json  action_get_query_torrent_historical__target_.json  action_get_query_torrent_ip__target_.json  action_get_query_torrent_search.json  action_get_query_torrent_search_stats.json  action_get_user_subscription.json  main.py  manifest.json  pyproject.toml
BitDefender/: CONFIGURE.md  action_bitdefender_gravity_quarantine_file.json  action_bitdefender_gravity_restore_quarantine_file.json  action_bitdefender_gravity_zone_custom_scan_endpoint.json  action_bitdefender_gravity_zone_deisolate_endpoint.json  action_bitdefender_gravity_zone_get_block_list.json  action_bitdefender_gravity_zone_isolate_endpoint.json  action_bitdefender_gravity_zone_kill_process.json  action_bitdefender_gravity_zone_push_connection_block.json  action_bitdefender_gravity_zone_push_hash_block.json  action_bitdefender_gravity_zone_push_path_block.json  action_bitdefender_gravity_zone_remove_block.json  action_bitdefender_gravity_zone_scan_endpoint.json  action_bitdefender_gravity_zone_update_comment_incident.json  action_bitdefender_gravity_zone_update_incident_status.json  main.py  manifest.json  pyproject.toml
BitDefender GravityZone/: CHANGELOG.md  CONFIGURE.md  README.md  action_bitdefender_gravity_quarantine_file.json  action_bitdefender_gravity_restore_quarantine_file.json  action_bitdefender_gravity_zone_custom_scan_endpoint.json  action_bitdefender_gravity_zone_deisolate_endpoint.json  action_bitdefender_gravity_zone_get_block_list.json  action_bitdefender_gravity_zone_isolate_endpoint.json  action_bitdefender_gravity_zone_kill_process.json  action_bitdefender_gravity_zone_push_connection_block.json  action_bitdefender_gravity_zone_push_hash_block.json  action_bitdefender_gravity_zone_push_path_block.json  action_bitdefender_gravity_zone_remove_block.json  action_bitdefender_gravity_zone_scan_endpoint.json  action_bitdefender_gravity_zone_update_comment_incident.json  action_bitdefender_gravity_zone_update_incident_status.json  main.py  manifest.json  pyproject.toml
Bitsight/: CHANGELOG.md  Dockerfile  connector_pull_findings.json  main.py  manifest.json  pyproject.toml  trigger_pull_findings.json
BroadcomCloudSwg/: CHANGELOG.md  Dockerfile  connector_broadcom_cloud_swg.json  main.py  manifest.json  pyproject.toml  trigger_broadcom_cloud_swg.json
CatoNetwork/: CHANGELOG.md  connector_cato_sase_events.json  main.py  manifest.json  pyproject.toml  trigger_cato_sase_events.json
CertificateTransparency/: CHANGELOG.md  main.py  manifest.json  pyproject.toml  trigger_certificate_update.json
Checkpoint/: CHANGELOG.md  connector_checkpoint_harmony_mobile_events.json  main.py  manifest.json  pyproject.toml  trigger_checkpoint_harmony_events.json  trigger_checkpoint_harmony_mobile_events.json
CrowdStrike/: CHANGELOG.md  Dockerfile  connector_crowdstrike_telemetry_events.json  main.py  manifest.json  pyproject.toml  trigger_crowdstrike_telemetry_events.json
(+2944 files in other folders)
