[tool.poetry]
name = "Automation module for 1Password"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sekoia-automation-sdk = "^1.18.1"
requests-ratelimiter = "^0.7.0"
orjson = "^3.10.7"
python-dateutil = "^2.9.0.post0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]