[tool.poetry]
name = "Automation Module for AWS"
description = ""
version = "0.0"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sekoia-automation-sdk = "^1.3.8"
boto3 = "^1.21.3"
orjson = "^3.6.7"
pandas = "^1.4.4"
fastparquet = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests-mock = "*"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]