[tool.poetry]
name = "aws-automation"
description = ""
version = "0.0"
authors = []
package-mode = true
packages = [
    {include = "connectors"},
    {include = "aws_helpers"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sekoia-automation-sdk = { version="^1.18.3", extras=["all"] } # TODO: update after release of `automation-sdk`
boto3 = "^1.35.93"
aiobotocore = "^2.17.0"
orjson = "^3.6.7"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
loguru = "^0.7.0"
async-lru = "^2.0.2"
aiofiles = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
requests = "*"
requests-mock = "*"
Faker = "^13.12.0"
aioresponses = "^0.7.4"
autoflake = "^1.4"
isort = "^5.10.1"
black = { version = "^24.3.0", extras = ["colorama"] }
mypy = "^0.991"
types-aiofiles = "^23.1.0.4"
types-python-dateutil = "^2.8.19.13"
poethepoet = { version = "^0.16.5", extras = ["poetry_plugin"] }
poetry = "^1.5.1"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = ["tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov=aws_helpers
  --cov=connectors
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --numprocesses=auto
  --asyncio-mode=auto
'''

[tool.poe.tasks.lint]
sequence = [
    { cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py" },
    { cmd = "poetry run black ." },
    { cmd = "poetry run isort ." },
    { cmd = "poetry run mypy ." },
]
help = "Make code linting and formatting."

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]
