[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation module for Akamai"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = [ "py314",]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
sekoia-automation-sdk = "^1.21.2"
edgegrid-python = "^2.0.0"
orjson = "^3.10.16"
requests-ratelimiter = "^0.7.0"
requests = "^2.32.3"
cachetools = "^5.5.2"
structlog = "^25.2.0"

[tool.coverage.run]
omit = [ "tests/*", "main.py",]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"
freezegun = "^1.5.1"
