[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation Module for Azure"
description = ""
version = "0.0"
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py314"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = ["tests/*", "dev.py"]
[[tool.mypy.overrides]]
module = "azure.eventhub.extensions.checkpointstoreblobaio.*"
ignore_errors = true

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
orjson = "^3.9.10"
azure-eventhub-checkpointstoreblob-aio = "^1.1.4"
azure-storage-blob = "^12.19.0"
azure-eventhub = "^5.11.5"
azure-identity = "^1.16.1"
async-lru = "^2.0.4"
aiofiles = "^23.2.1"
loguru = "^0.7.2"
uamqp = "^1.6.6"
cachetools = "^6.2.0"
msgraph-sdk = "^1.45.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore:.*unclosed.*:ResourceWarning",
]
addopts = "  --strict-markers\n  --tb=short\n  --cov=connectors\n  --cov=azure_helpers\n  --cov=graph_api\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=5\n  --asyncio-mode=auto\n"

[tool.coverage.run]
omit = ["tests/*", "main.py", "dev.py"]

[tool.poetry.dependencies.sekoia-automation-sdk]
version = "^1.16.0"
extras = ["all"]

[tool.poe.tasks.lint]
help = "Make code linting and formatting."
[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py"

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run black ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run isort ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run mypy ."

[tool.poetry.group.dev.dependencies]
pytest = "<8"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
requests = "*"
requests-mock = "*"
Faker = "^13.12.0"
aioresponses = "^0.7.4"
autoflake = "^1.4"
isort = "^5.10.1"
mypy = "^0.991"
types-aiofiles = "^23.1.0.4"
types-python-dateutil = "^2.8.19.13"
poetry = "^1.5.1"

[tool.poetry.group.dev.dependencies.black]
version = "^24.3.0"
extras = ["colorama"]

[tool.poetry.group.dev.dependencies.poethepoet]
version = "^0.16.5"
extras = ["poetry_plugin"]
