[tool.poetry]
name = "Azure Active Directory"
description = ""
version = "0.0"
authors = []

[[tool.poetry.source]]
name = "SEKOIA.IO"
url = "https://delivery.sekoia.io/nexus/repository/pypi-test/simple"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
msgraph-core = "^0.2.2"
azure-identity = "^1.10.0"
pydantic = "^1.9.1"
sekoia-automation-sdk = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests-mock = "*"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^4.0.1"
mypy = "^0.961"
pytest-clarity = "^1.0.1"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
]
