[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation module for Azure Monitor"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py38"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
azure-mgmt-monitor = "^7.0.0"
azure-monitor-query = "^1.4.1"
azure-identity = "^1.20.0"
orjson = "^3.10.15"
cachetools = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "  --strict-markers\n  --tb=short\n  --cov=azure_monitor_modules\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=5\n  --capture=sys\n"

[tool.poetry.dependencies.sekoia-automation-sdk]
extras = ["all"]
version = "^1.21.1"
