[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation module for Beyondtrust"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py314"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
sekoia-automation-sdk = "^1.18.1"
orjson = "^3.10.15"
lxml = "^5.3.0"
structlog = "^25.1.0"
cachetools = "^5.5.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "  --strict-markers\n  --tb=short\n  --cov=beyondtrust_modules\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=5\n  --capture=sys\n"
