[project]
name = "bitdefender"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests-ratelimiter (>=0.7.0,<0.8.0)",
    "sekoia-automation-sdk (>=1.19.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "stix2-patterns (>=2.0.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
