[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SEKOIA's automation module for Bitsight"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py310"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = ["tests/*"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.20.0"
orjson = "^3.8.12"
aiohttp = "^3.13.3"
aiolimiter = "^1.1.0"
loguru = "^0.7.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore:.*unclosed.*:ResourceWarning",
]
addopts = "  --strict-markers\n  --tb=short\n  --asyncio-mode=auto\n  --cov=connectors\n  --cov=client\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=90\n"

[tool.coverage.run]
omit = ["tests/*", "main.py", "connectors/metrics.py"]

[tool.poe.tasks.lint]
help = "Make code linting and formatting."
[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py"

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run black ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run isort ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run mypy ."

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
aioresponses = "^0.7.4"
Faker = "^13.12.0"
autoflake = "^1.4"
isort = "*"
mypy = "*"

[tool.poetry.group.dev.dependencies.black]
version = "*"
extras = ["colorama"]

[tool.poetry.group.dev.dependencies.poethepoet]
version = "^0.16.5"
extras = ["poetry_plugin"]
