[tool.poetry]
name = "Sekoia.io Automation Module to work with Broadcom Cloud SWG events"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
orjson = "^3.7.7"
python-dateutil = "^2.8.2"
sekoia-automation-sdk = { version = "^1.16.0", extras = ["all"] }
aiohttp = "^3.8.5"
aiofiles = "^23.2.0"
aiolimiter = "^1.1.0"
zipstream = "^1.1.4"
aiozipstream = "^0.4"
pytz = "^2024.1"
aiohttp-retry = "^2.8.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
Faker = "^13.12.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^1.8.0"
aioresponses = "^0.7.4"
types-aiofiles = "^23.1.0.4"
types-python-dateutil = "^2.8.19.13"
poethepoet = { version = "^0.16.5", extras = ["poetry_plugin"] }
poetry = "^1.5.1"
types-pytz = "^2024.1.0.20240203"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = ["tests/*", "main-local.py", "main-local-1.py", "main-local-new.py"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
addopts = '''
  --strict-markers
  --tb=short
  --cov=connectors
  --cov=client
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=5
  --numprocesses=auto
  --asyncio-mode=auto
  --capture=sys
'''

[tool.poe.tasks.lint]
sequence = [
    { cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py" },
    { cmd = "poetry run black ." },
    { cmd = "poetry run isort ." },
    { cmd = "poetry run mypy ." },
]
help = "Make code linting and formatting."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
