[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Sekoia.io Automation Module to work with Cato Networks"
version = "1.0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = [ "py314",]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = [ "tests/*",]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
orjson = "^3.7.7"
python-dateutil = "^2.8.2"
loguru = "^0.7.0"
async-lru = "^2.0.2"
aiolimiter = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
Faker = "^13.12.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.960"
types-python-dateutil = "^2.8.19.13"

[tool.coverage.run]
omit = [ "cato/metrics.py",]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [ "tests",]
filterwarnings = [ "error", "ignore::DeprecationWarning", "ignore:.*unclosed.*:ResourceWarning",]
addopts = "  --strict-markers\n  --tb=short\n  --cov=cato\n  --cov=client\n  --cov=logger\n  --cov-branch\n  --cache-clear\n  --cov-report=html\n  --cov-report=term-missing:skip-covered\n  --cov-fail-under=5\n  --numprocesses=auto\n  --asyncio-mode=auto\n"

[tool.poetry.dependencies.sekoia-automation-sdk]
version = "^1.21.2"
extras = [ "all",]

[tool.poetry.dependencies.gql]
extras = [ "all",]
version = "^3.4.1"

[tool.poetry.dev-dependencies.poethepoet]
version = "^0.16.5"
extras = [ "poetry_plugin",]

[tool.poe.tasks.lint]
help = "Make code linting and formatting."
[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py"

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run black ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run isort ."

[[tool.poe.tasks.lint.sequence]]
cmd = "poetry run mypy ."

