[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Automation Module for CertificateTransparency"
description = ""
version = "0.0"
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py314"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
sekoia-automation-sdk = "^1.13.0"
certstream = "^1.11"
numpy = "^1.25.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py"]
